Initial test suite.

--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,7 @@
     {"LDFLAGS", "-L/usr/local/ofed/1.5.4/lib64 -lrdmacm -libverbs"}
 ]}.
 {port_specs, [{"priv/rdma_drv.so", ["c_src/rdma_drv.c"]}]}.
+
+{cover_enabled, true}.
+{ct_log_dir, "test/logs"}.
+{ct_extra_params, "+K true"}.
