--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {port_env, [
-    {"CFLAGS", "-I/usr/local/ofed/1.5.4/include"},
+    {"CFLAGS", "-I/usr/local/ofed/1.5.4/include -O2"},
     {"LDFLAGS", "-L/usr/local/ofed/1.5.4/lib64 -lrdmacm -libverbs"}
 ]}.
 {port_specs, [{"priv/rdma_drv.so", ["c_src/rdma_drv.c"]}]}.
