checkpoint: Significantly more error checking...plus disconnection support and more tests

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,11 @@
-{port_env, [
-    {"CFLAGS", "-I/usr/local/ofed/1.5.4/include -O2"},
+{port_specs, [{"", "priv/rdma_drv.so", [
+    "c_src/rdma_drv.c",
+    "c_src/rdma_drv_buffers.c",
+    "c_src/rdma_drv_options.c"
+], [{env, [
+    {"CFLAGS", "-I/usr/local/ofed/1.5.4/include"},
     {"LDFLAGS", "-L/usr/local/ofed/1.5.4/lib64 -lrdmacm -libverbs"}
-]}.
-{port_specs, [{"priv/rdma_drv.so", ["c_src/rdma_drv.c"]}]}.
+]}]}]}.
 
 {cover_enabled, true}.
 {ct_log_dir, "test/logs"}.
