Make build more generic

--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,7 @@
     "c_src/rdma_drv_buffers.c",
     "c_src/rdma_drv_options.c"
 ], [{env, [
-    {"CFLAGS", "-I/usr/local/ofed/1.5.4/include"},
-    {"LDFLAGS", "-L/usr/local/ofed/1.5.4/lib64 -lrdmacm -libverbs"}
+    {"LDFLAGS", "$LDFLAGS -lrdmacm -libverbs"}
 ]}]}]}.
 
 {cover_enabled, true}.
